--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -2,10 +2,7 @@ $bootstrap-sass-asset-helper: false !default;
 //
 // Variables
 // --------------------------------------------------
-
-//fonts
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,700,900');
-
+@import url("https://fonts.googleapis.com/css?family=Raleway:400,700,900");
 //== Colors
 //
 //## Gray and brand colors for use across Bootstrap.
