--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,12 +1,14 @@
 footer {
 	padding:100px 0;
-	text-align:center;
+	text-align:left;
 	border-top:1px solid #eaeaea;
 
 	h4 {
 		font-weight:bold;
-		margin:20px 0;
+		margin:20px 20px 20px 0;
 		font-size:20px;
+		display: inline-block;
+		vertical-align: middle;
 	}
 
 	.contact-circle {
@@ -46,18 +48,22 @@ footer {
 
 	ul.social-media {
 		list-style:none;
-		margin-top:40px;
 		padding:0;
-		margin:60px 0 0 0;
+		margin:0;
+		display: inline-block;
+		vertical-align: middle;
 
 		li {
 			display: inline-block;
-			margin:0 4px;
+			margin:0px;
+			padding:0;
 
 			a {
 				display: block;
-				width:50px;
-				height:50px;
+				width:25px;
+				height:25px;
+				padding:0;
+				margin-right:10px;
 
 				img {
 					width:100%;
