--- a/sass/partials/_article.scss
+++ b/sass/partials/_article.scss
@@ -41,61 +41,40 @@ article {
 	code {
 		font-family: monospace;
 	}
-
-
 }
 
-.next-articles {
-	height:350px;
+.share-buttons {
 	width:100%;
-	background:$dark-blue;
-	margin-top:50px;
-	text-align:center;
-	padding:0;
+	border-top:1px solid $dark-blue;
+	padding-top:24px;
+	margin-top:48px;
 
-	.articleNav {
-		height:100%;
-		padding-top:0;
-		padding-bottom:0;
-		color:#ffffff;
-		background-position:center center;
-		position:relative;
+	.share-title {
+		display: inline-block;
+		vertical-align: middle;
+		margin-right:24px;
+	}
 
-		&:hover .overlay {
-			opacity: 0.1;
-		}
+	ul {
+		padding:0;
+		margin:0;
+		display: inline-block;
+		vertical-align: middle;
+	}
 
-		.overlay {
-			background:$purple;
-			position:absolute;
-			top:0;
-			left:0;
-			height:100%;
-			width:100%;
-			z-index: 0;
-			opacity: 0.5;
-			transition:all ease 0.2s;
-		}
+	li {
+		list-style:none;
+		float:left;
+		margin-right:18px;
 
-		.text {
-			position: relative;
-			z-index: 100;
-			top:50%;
-			transform:translateY(-50%);
+		a {
+			height:40px;
+			width:40px;
+			display: block;
 
-			h4.title {
-				font-weight:bolder;
-				font-size:30px;
-			}
-
-			p.date {
-				font-size:14px;
-			}
-
-			p.excerpt {
-				font-size:16px;
-				line-height: 26px;
-				margin-top:40px;
+			img {
+				width:100%;
+				height:100%;
 			}
 		}
 	}
